<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quizz David</string>
    <string name="Encabezado">Quizzes</string>
    <string name="tv_pregunta">"What value of 'y' is a solution to this equation?</string>
    <string name="bt_enviar">SEND</string>
    <string name="toast_select_option">Please select an option</string>
    <string name="tv_operacion">Operation</string>
    <string name="tv_equacion">Equation</string>
    <string name="opcion1">Option 1</string>
    <string name="opcion2">Option 2</string>
    <string name="encabezado2">Quizzes</string>
    <string name="tv_bienmal">Correct/Incorrect</string>
    <string name="bt_resultado">Continue</string>
    <string name="resultado_correcto">Right</string>
    <string name="resultado_incorrecto">Bad</string>
    <string name="resultado_siguiente">Next</string>
    <string name="resultado_finusu">Congratulations! You have finished the lesson!</string>
    <string name="resultado_acabado">Finish</string>
    <string name="resultado_reiniciar">Start again</string>
</resources>





