<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detalle.MainActivityResultado">

    <TextView
        android:id="@+id/encabezado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/encabezado2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bienmal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/tv_bienmal"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:background="#4CAF50"
        android:padding="12dp"
        android:text="@string/bt_resultado"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />
</LinearLayout>


